--- a/index.2.html
+++ b/index.2.html
@@ -144,7 +144,8 @@
 
         <div class="game">
             <div class="img-box">
-                <img src="images/VERT-1.jpg"
+                <img src="images/VERT-1.jpg">
+            </div>
             <h3>[VC] Cozy House🌸</h3>
             <p class="desc">A chill hangout full of soft colors and friendly faces.</p>
             <button class="join-btn" onclick="redirectToGame()">Join</button>
