Update image source for game display

--- a/index.2.html
+++ b/index.2.html
@@ -144,7 +144,7 @@
 
         <div class="game">
             <div class="img-box">
-                <img src="images/VERT-1.jpg">
+                <img src="VERT-1.jpg">
             </div>
             <h3>[VC] Cozy House🌸</h3>
             <p class="desc">A chill hangout full of soft colors and friendly faces.</p>
