--- a/index.2.html
+++ b/index.2.html
@@ -144,7 +144,7 @@
 
         <div class="game">
             <div class="img-box">
-                <img src="VERT-1.jpg">
+                <img src="https://media.discordapp.net/attachments/1433648055030251550/1433659468368969789/fda2b7fe5376d001d5a12cc01a236c5e.5.jpg?ex=69057eed&is=69042d6d&hm=24825ef866eb36f1d8f9624be6b64a6c8b38d0f7fdf77c3f1a0ecc4f3340c065&=&format=webp&width=901&height=507">
             </div>
             <h3>[VC] Cozy House🌸</h3>
             <p class="desc">A chill hangout full of soft colors and friendly faces.</p>
